# AI-Signals

./: .env.local  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  requirements.txt  vercel.json  vite.config.js
api/: feed.py
docs/: architecture.md
frontend/: index.html
frontend/css/: main.css
frontend/js/: agent.js  app.js  config.example.js  config.js  dedup.js  fetcher.js  filters.js  logger.js  render.js  utils.js
scripts/: fetch_and_classify.py  serve.py
server/: proxy.py
src/: pyproject.toml
src/agent/: classifier.py
src/fetcher/: rss.py
src/utils/: dates.py  dedup.py
